# PokeSearchAPI

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
my_poke_api/: main.py  settings.py
my_poke_api/resources/: alola_idx.txt  galar_idx.txt  hoenn_idx.txt  johto_idx.txt  kalos_idx.txt  kanto_idx.txt  paldea_idx.txt  pokemon.json  sinnoh_idx.txt  unova_idx.txt
tests/: test_main.py
