[tool.poetry]
name = "my-poke-api"
version = "0.1.0"
description = ""
authors = ["Jorge Alvarado <alvaradosegurajorge@gmail.com>"]
readme = "README.md"
packages = [{include = "my_poke_api"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.21.1"
requests = "^2.28.2"
fastapi = {extras = ["all"], version = "^0.95.0"}
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
coverage = "^7.2.3"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
